<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pronunciation_format">/%1$s/</string>
    <string name="app_name">Mwaghavul Lexicon</string>
    <string name="network">NETWORK</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="Share">Share</string>
    <string name="other">OTHER</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="english_mwaghavul">English - Mwaghavul</string>
    <string name="mwaghavul_english">Mwaghavul - English</string>
    <string name="english_english">English - English</string>
    <string name="rate_us">Rate us</string>
    <string name="translation">Translation:</string>
    <string name="examples">Examples:</string>
    <string name="definition">Definition:</string>
    <string name="ipa">IPA:</string>
    <string name="search_box">Search…</string>
    <string name="search_icon">search_icon</string>
    <string name="forward_arrow">forward arrow</string>
    <string name="part_of_speech">Part of Speech</string>
    <string name="speaker_button">speaker_button</string>
    <string name="bookmark_button">bookmark_button</string>
    <string name="new_word">New Word</string>
    <string name="mwaghavul_logo">mwaghavul logo</string>
    <string name="word_of_the_day">WORD of the DAY</string>
    <string name="wu_t_ng">wu tàng</string>
    <string name="close_icon">close_icon</string>
    <string name="clear">Clear</string>
</resources>