<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<!--    <group android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/nav_account"-->
<!--            android:icon="@drawable/k"-->
<!--            android:title="@string/bookmark"/>-->
<!--    </group>-->
    <item   android:title="@string/network">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/baseline_share"
                android:title="@string/Share"/>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/baseline_thumb_up"
                android:title="@string/rate_us"/>
        </menu>
    </item>
    <item   android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/baseline_help"
                android:title="@string/help"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/baseline_info"
                android:title="@string/about"/>
        </menu>
    </item>
</menu>