<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/round_translate_24"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item android:title="@string/english_mwaghavul"
                android:id="@+id/english_mwaghavul"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:title="@string/mwaghavul_english"
                android:id="@+id/mwaghavul_english"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item android:title="@string/english_english"
                android:id="@+id/english_english"
                android:orderInCategory="100"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>