<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/search_badge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/search_badge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lower_view"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:background="@drawable/rounded_bottom_left_corner">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wu_t_ng"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/search_box_background"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/search_icon"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/edit_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/search_box"
                android:background="@android:color/transparent"
                android:inputType="textAutoComplete"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:contentDescription="@string/close_icon"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Background view with primary red color -->
    <FrameLayout
        android:id="@+id/lower_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/search_badge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorBackground"
            android:background="@drawable/rounded_top_right_corner"
            android:padding="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Add the content of your main layout here -->
            <ListView
                android:id="@+id/dictionary_search_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:visibility="visible"
                android:paddingTop="4dp"
                android:divider="@color/colorBackground"
                android:dividerHeight="6dp"
                android:orientation="vertical" />

        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
